--- a/front/src/css/resume.css
+++ b/front/src/css/resume.css
@@ -1,741 +1,42 @@
 /* resume_s1 */
 .resume_s1 {
-  width: 100%;
-  height: 34.98vw;
-}
-.resume_s1 .article_container {
-  width: 67.42%;
-  height: 73.45%;
+  width: 37.15%;
+  height: auto;
   margin: 0 auto;
-  margin-top: 5.54vw;
-  border: 1px solid #b6b6b6;
-  border-radius: 0.7vw;
-  display: flex;
-}
-.resume_s1 .article_container .img_box {
-  width: 20.22%;
-  height: 53.06%;
-  margin-top: 5.88vw;
-  margin-left: 5.99vw;
-}
-.resume_s1 .article_container .img_box img {
-  width: 100%;
-  height: 100%;
-}
-.resume_s1 .article_container .article {
-  width: 48%;
-  height: 47.38%;
-  margin-top: 6.59vw;
-  margin-left: 6.74vw;
-}
-.resume_s1 .article_container .article .title_box {
-  width: 41.07%;
-  height: 15.69%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.resume_s1 .article_container .article .title_box p {
-  font-size: 1.5vw;
-  font-weight: 700;
-  color: #272727;
-}
-.resume_s1 .article_container .article .title_box .career {
-  width: 57.64%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid #2196f3;
-  border-radius: 0.5vw;
-  font-size: 0.97vw;
-  color: #2196f3;
-}
-.resume_s1 .article_container .article > p {
-  font-size: 1.2vw;
-  color: #b6b6b6;
-  margin-top: 0.5vw;
-}
-.resume_s1 .article_container .article .text_container {
-  width: 100%;
-  height: 49.54%;
-  margin-top: 2.1vw;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
-.resume_s1 .article_container .article .text_box {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.resume_s1 .article_container .article .text_box p {
-  font-size: 1.2vw;
-  color: #272727;
-}
-.resume_s1 .article_container .article .text_box p:nth-child(1) {
-  width: 11.83%;
-}
-.resume_s1 .article_container .article .text_box p:nth-child(2) {
-  width: 82.84%;
-}
-
-/* resume_s2 */
-.resume_s2 {
-  width: 100%;
-  height: 111.5vw;
-}
-.resume_s2 .article_container {
-  width: 67.42%;
-  height: 95.1%;
-  margin: 0 auto;
-}
-.resume_s2 .article_container .article1 {
-  width: 100%;
-  height: 7.7%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.resume_s2 .article_container .article1 > p {
-  font-size: 1.8vw;
-  font-weight: 700;
-  color: #272727;
-  padding-bottom: 0.3vw;
-  border-bottom: 1px solid #b6b6b6;
-}
-.resume_s2 .article_container .article1 .input_box {
-  width: 83.83%;
-  height: 36.7%;
-  margin: 0 auto;
-}
-.resume_s2 .article_container .article1 .input_box input {
-  width: 100%;
-  height: 100%;
-  background-color: #eeeeee;
-  border: none;
-  border-radius: 0.5vw;
-}
-.resume_s2 .article_container .article2 {
-  width: 100%;
-  height: 8.37%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-top: 4.98vw;
-}
-.resume_s2 .article_container .article2 > p {
-  font-size: 1.8vw;
-  font-weight: 700;
-  color: #272727;
-  padding-bottom: 0.3vw;
-  border-bottom: 1px solid #b6b6b6;
-}
-.resume_s2 .article_container .article2 .input_box {
-  width: 62.72%;
-  height: 33.76%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-left: 0.82vw;
-}
-.resume_s2 .article_container .article2 .input_box p {
+.resume_s1 form > p {
   font-size: 1.5vw;
   font-weight: 700;
-  color: #272727;
+  color: #787160;
+  text-align: left;
+  margin-top: 3.11vw;
+  margin-bottom: 1.46vw;
 }
-.resume_s2 .article_container .article2 .input_box input {
-  width: 39.86%;
-  height: 100%;
-  background-color: #eeeeee;
-  border: none;
-  border-radius: 0.5vw;
-}
-.resume_s2 .article_container .article3 {
-  width: 100%;
-  height: 38.22%;
-  margin-top: 7vw;
-}
-.resume_s2 .article_container .article3 .title_box {
-  width: 100%;
-  height: 7%;
-  border-bottom: 1px solid #b6b6b6;
-  display: flex;
-  align-items: center;
-}
-.resume_s2 .article_container .article3 .title_box > p {
-  font-size: 1.8vw;
-  font-weight: 700;
-  color: #272727;
-}
-.resume_s2 .article_container .article3 .title_box .title_btn {
-  width: 11.14%;
-  height: 70.24%;
-  border: 2px solid #b6b6b6;
-  border-radius: 0.3vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.97vw;
-  color: #979797;
-}
-.resume_s2 .article_container .article3 .title_box .title_btn:nth-child(2) {
-  margin-left: 2.7vw;
-  margin-right: 0.6vw;
-}
-.resume_s2 .article_container .article3 .title_box .title_btn:nth-child(3) {
-  border-color: #2196f3;
-  color: #2196f3;
-}
-.resume_s2 .article_container .article3 .input_box_container {
-  width: 93.94%;
-  height: 30.31%;
-  margin-top: 3.03vw;
-  margin-left: 0.82vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.resume_s2 .article_container .article3 .input_box_container .input_box {
-  width: 100%;
-  height: 24.39%;
-  display: flex;
-  align-items: center;
-}
-.resume_s2 .article_container .article3 .input_box_container .input_box > p {
-  width: 13%;
-  font-size: 1.5vw;
-  font-weight: 700;
-  color: #272727;
-}
-.resume_s2
-  .article_container
-  .article3
-  .input_box_container
-  .input_box:nth-child(1)
-  input {
-  width: 38.56%;
-  height: 100%;
-  margin-left: 4.68vw;
-  background-color: #eeeeee;
-  border: none;
-  border-radius: 0.5vw;
-}
-.resume_s2
-  .article_container
-  .article3
-  .input_box_container
-  .input_box:nth-child(2)
-  p:nth-child(3) {
-  width: 6.03%;
-  font-size: 1.5vw;
-  font-weight: 700;
-  color: #b6b6b6;
+.resume_s1 form .title {
   text-align: center;
 }
-.resume_s2
-  .article_container
-  .article3
-  .input_box_container
-  .input_box:nth-child(2)
-  p:nth-child(5) {
-  width: 8.04%;
-  font-size: 1.5vw;
-  font-weight: 700;
-  color: #b6b6b6;
-  text-align: center;
-}
-.resume_s2
-  .article_container
-  .article3
-  .input_box_container
-  .input_box:nth-child(2)
-  input {
-  width: 11.14%;
-  height: 100%;
+.resume_s1 form .title_input {
+  width: 100%;
+  height: 3vw;
   background-color: #eeeeee;
-  border: none;
-  border-radius: 0.5vw;
-}
-.resume_s2
-  .article_container
-  .article3
-  .input_box_container
-  .input_box:nth-child(2)
-  input:nth-child(2) {
-  margin-left: 4.68vw;
-}
-.resume_s2
-  .article_container
-  .article3
-  .input_box_container
-  .input_box:nth-child(2)
-  .input_btn {
-  width: 11.14%;
-  height: 100%;
-  border: 2px solid #b6b6b6;
-  border-radius: 0.5vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.97vw;
-  color: #979797;
-  margin-left: 1.31vw;
-}
-.resume_s2
-  .article_container
-  .article3
-  .input_box_container
-  .input_box:nth-child(2)
-  .input_btn:nth-child(6) {
-  margin-left: 3.45vw;
-}
-.resume_s2
-  .article_container
-  .article3
-  .input_box_container
-  .input_box:nth-child(3)
-  img {
-  width: 1.25vw;
-  height: 1.25vw;
-  margin-left: 4.75vw;
-}
-.resume_s2
-  .article_container
-  .article3
-  .input_box_container
-  .input_box:nth-child(3)
-  p:nth-child(3) {
-  width: auto;
-  font-size: 0.97vw;
-  color: #979797;
-  margin-left: 1.01vw;
-}
-.resume_s2
-  .article_container
-  .article3
-  .input_box_container
-  .input_box:nth-child(3)
-  p:nth-child(5) {
-  width: auto;
-  font-size: 0.97vw;
-  color: #979797;
-  margin-left: 1.01vw;
-}
-.resume_s2
-  .article_container
-  .article3
-  .input_box_container
-  .input_box:nth-child(3)
-  p:nth-child(6) {
-  width: auto;
-  margin-left: 5.3vw;
-}
-.resume_s2
-  .article_container
-  .article3
-  .input_box_container
-  .input_box:nth-child(3)
-  .input_btn {
-  width: 11.14%;
-  height: 100%;
-  border: 2px solid #b6b6b6;
-  border-radius: 0.5vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.97vw;
-  color: #979797;
-  margin-left: 4.6vw;
-}
-.resume_s2 .article_container .article3 .text_box {
-  width: 98.78%;
-  height: 45.19%;
-  margin-top: 3.75vw;
-  margin-left: 0.82vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.resume_s2 .article_container .article3 .text_box p {
-  font-size: 1.5vw;
-  font-weight: 700;
-  color: #272727;
-}
-.resume_s2 .article_container .article3 .text_box input {
-  width: 100%;
-  height: 82.21%;
-  background-color: #eeeeee;
-  border: none;
-  border-radius: 0.5vw;
-}
-.resume_s2 .article_container .article4 {
-  width: 100%;
-  height: 24.62%;
-  margin-top: 5.73vw;
-}
-.resume_s2 .article_container .article4 > p {
-  font-size: 1.8vw;
-  font-weight: 700;
-  color: #272727;
-  padding-bottom: 0.3vw;
-  border-bottom: 1px solid #b6b6b6;
-}
-.resume_s2 .article_container .article4 .title_box {
-  width: 98.78%;
-  height: 11.48%;
-  margin-left: 0.82vw;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 3.15vw;
-}
-.resume_s2 .article_container .article4 .title_box p {
-  font-size: 1.5vw;
-  font-weight: 700;
-  color: #272727;
-}
-.resume_s2 .article_container .article4 .title_box input {
-  width: 82.23%;
-  height: 100%;
-  background-color: #eeeeee;
-  border: none;
-  border-radius: 0.5vw;
-}
-.resume_s2 .article_container .article4 > input {
-  width: 98.78%;
-  height: 57.39%;
-  margin-top: 2.1vw;
-  margin-left: 0.82vw;
-  background-color: #eeeeee;
-  border: none;
-  border-radius: 0.5vw;
-}
-.resume_s2 .article_container .article5 {
-  width: 24.28%;
-  height: 2.83%;
-  float: right;
-  margin-top: 1.65vw;
-  display: flex;
-  justify-content: space-between;
-}
-.resume_s2 .article_container .article5 .btn {
-  width: 45.89%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.97vw;
-  color: white;
-  border-radius: 0.3vw;
-}
-.resume_s2 .article_container .article5 .btn:nth-child(1) {
-  background-color: #c2c2c2;
-}
-.resume_s2 .article_container .article5 .btn:nth-child(2) {
-  background-color: #cabd99;
-}
-
-/* resume_s3 */
-.resume_s3 {
-  width: 100%;
-  height: 53.15vw;
-}
-.resume_s3 .line_box {
-  width: 67.42%;
-  margin: 0 auto;
-  border-top: 1px solid #707070;
-}
-.resume_s3 .article_container {
-  width: 67.42%;
-  height: 72.23%;
-  margin: 0 auto;
-  margin-top: 3.14vw;
-}
-.resume_s3 .article_container .article1 {
-  width: 100%;
-  height: 32.29%;
-  background-color: #f9f5ea;
-  border: 1px solid #cabd99;
-  border-radius: 0.5vw;
-}
-.resume_s3 .article_container .article1 .text_box {
-  width: 64%;
-  height: 50%;
-  margin-top: 2.5vw;
-  margin-left: 4.42vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.resume_s3 .article_container .article1 .text_box p:nth-child(1) {
-  font-size: 1.94vw;
-  font-weight: 1.94vw;
-  color: #272727;
-}
-.resume_s3 .article_container .article1 .text_box p:nth-child(1) span {
-  color: #787160;
-}
-.resume_s3 .article_container .article1 .text_box p:nth-child(2) {
-  font-size: 1.05vw;
-  color: #787160;
-}
-.resume_s3 .article_container .article1 .btn_box {
-  width: 24.28%;
-  height: 24.17%;
-  float: right;
-  margin-right: 0.94vw;
-  display: flex;
-  justify-content: space-between;
-}
-.resume_s3 .article_container .article1 .btn_box .btn {
-  width: 45.89%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 0.3vw;
-  font-size: 0.97vw;
-  color: white;
-}
-.resume_s3 .article_container .article1 .btn_box .btn:nth-child(1) {
-  background-color: #c2c2c2;
-}
-.resume_s3 .article_container .article1 .btn_box .btn:nth-child(2) {
-  background-color: #cabd99;
-}
-.resume_s3 .article_container .article2 {
-  width: 100%;
-  height: 40%;
-  margin-top: 3.26vw;
-  border: 1px solid #b6b6b6;
-  border-radius: 0.5vw;
-}
-.resume_s3 .article_container .article2 .input_box_container {
-  width: 54.17%;
-  height: 66.1%;
-  margin: 0 auto;
-  margin-top: 2.7vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-.resume_s3 .article_container .article2 .input_box_container .input_box {
-  width: 100%;
-  height: 29.52%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.resume_s3 .article_container .article2 .input_box_container .input_box > p {
-  width: 27%;
-  font-size: 1.5vw;
-  font-weight: 700;
-  color: #272727;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box
-  .input_box_container_01 {
-  width: 67.69%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box
-  .input_box_container_01
-  .input_box_01 {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box
-  .input_box_container_01
-  .input_box_01
-  input {
-  background-color: #eeeeee;
+  font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
 }
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box
-  .input_box_container_01
-  .input_box_01
-  > p {
-  font-size: 1.5vw;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box
-  .input_box_container_01
-  .input_box_01:nth-child(1) {
-  width: 35.3%;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box
-  .input_box_container_01
-  .input_box_01:nth-child(1)
-  input {
-  width: 52.42%;
-  height: 100%;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box
-  .input_box_container_01
-  .input_box_01:nth-child(2) {
-  width: 28.64%;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box
-  .input_box_container_01
-  .input_box_01:nth-child(2)
-  input {
-  width: 64.62%;
-  height: 100%;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box
-  .input_box_container_01
-  .input_box_01:nth-child(3) {
-  width: 28.64%;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box
-  .input_box_container_01
-  .input_box_01:nth-child(3)
-  input {
-  width: 64.62%;
-  height: 100%;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box:nth-child(2)
-  .input_box_container_01 {
-  justify-content: flex-start;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box:nth-child(2)
-  .input_box_container_01
-  .input_box_01 {
-  width: 16.97%;
-  margin-left: 0.75vw;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box:nth-child(2)
-  .input_box_container_01
-  .input_box_01:nth-child(2) {
-  margin-left: 4.31vw;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box:nth-child(2)
-  .input_box_container_01
-  .input_box_01
-  img {
-  width: 1.24vw;
-  height: 1.24vw;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box:nth-child(2)
-  .input_box_container_01
-  .input_box_01
-  p {
-  font-size: 0.97vw;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box:nth-child(3)
-  .input_box_container_01
-  .input_box_01 {
-  width: 100%;
-}
-.resume_s3
-  .article_container
-  .article2
-  .input_box_container
-  .input_box:nth-child(3)
-  .input_box_container_01
-  .input_box_01
-  input {
-  width: 100%;
-}
-.resume_s3 .article_container > .btn_box {
-  width: 24.28%;
-  height: 7.8%;
-  float: right;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 4.2vw;
-}
-.resume_s3 .article_container .btn_box .btn {
-  width: 45.89%;
-  height: 100%;
+.resume_s1 form button {
+  width: 7.49vw;
+  height: 3vw;
+  margin: 0 auto;
+  margin-top: 6.07vw;
+  border-radius: 0.5vw;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 0.97vw;
+  font-weight: 700;
   color: white;
-  border-radius: 0.3vw;
-}
-.resume_s3 .article_container .btn_box .btn:nth-child(1) {
-  background-color: #c2c2c2;
-}
-.resume_s3 .article_container .btn_box .btn:nth-child(2) {
+  cursor: pointer;
   background-color: #cabd99;
-}
-.resume_s3 > .text_box {
-  width: 10%;
-  margin: 0 auto;
-  margin-top: 6.4vw;
-  font-size: 0.9vw;
-  color: #b6b6b6;
-  text-align: center;
 }
