--- a/front/src/css/resume.css
+++ b/front/src/css/resume.css
@@ -6,6 +6,11 @@
   display: flex;
   flex-direction: column;
 }
+.resume_s1 > p {
+  font-size: 0.75vw;
+  font-weight: 700;
+  margin-top: 5vw;
+}
 .resume_s1 form > p {
   font-size: 1.5vw;
   font-weight: 700;
@@ -25,6 +30,112 @@
   border: none;
   border-radius: 0.4vw;
 }
+
+.resume_s1 form .input_box {
+  width: 100%;
+  height: 3vw;
+  display: flex;
+  margin-top: 1.46vw;
+  align-items: center;
+}
+.resume_s1 form .select_box {
+  width: 100%;
+  height: 3vw;
+  display: flex;
+  margin-top: 1.46vw;
+  align-items: center;
+}
+.resume_s1 form > .input_box > p {
+  width: 32.63%;
+  /* height: 100%; */
+  display: flex;
+  /* align-items: center; */
+  font-size: 1.5vw;
+  font-weight: 700;
+}
+.resume_s1 form > .input_box > input {
+  width: 67.37%;
+  height: 100%;
+  background-color: #eeeeee;
+  font-size: 1.2vw;
+  border: none;
+  border-radius: 0.4vw;
+}
+.resume_s1 form > .input_box > input {
+  width: 67.37%;
+  height: 100%;
+  background-color: #eeeeee;
+  font-size: 1.2vw;
+  border: none;
+  border-radius: 0.4vw;
+}
+.resume_s1 form > .input_box > .sub_input {
+  width: 67.37%;
+  height: 100%;
+  font-size: 1.2vw;
+  border: none;
+  border-radius: 0.4vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.resume_s1 form > .input_box > .sub_input > input {
+  width: 40%;
+  height: 100%;
+  background-color: #eeeeee;
+  font-size: 1.2vw;
+  border: none;
+  border-radius: 0.4vw;
+}
+.resume_s1 form > .select_box > p {
+  width: 32.63%;
+  /* height: 100%; */
+  display: flex;
+  /* align-items: center; */
+  font-size: 1.5vw;
+  font-weight: 700;
+}
+.resume_s1 form > .select_box > .sub_select {
+  width: 67.37%;
+  height: 100%;
+  display: flex;
+
+  /* background-color: #eeeeee;
+  font-size: 1.2vw;
+  border: none;
+  border-radius: 0.4vw; */
+}
+.resume_s1 form > .select_box > .sub_select > input {
+  height: 100%;
+  font-size: 1.2vw;
+  border: none;
+  border: 2px solid #eeeeee;
+  border-radius: 0.4vw;
+  font-size: 0.98vw;
+  color: #707070;
+  text-align: center;
+  margin: 0vw;
+  padding: 0vw;
+}
+.resume_s1 form > .select_box > .sub_select1 > input {
+  width: 23%;
+  margin-right: 0.7vw;
+}
+.resume_s1 form > .select_box > .sub_select1 > input:last-child {
+  margin-right: 0vw;
+}
+.resume_s1 form > .select_box > .sub_select2 > input {
+  width: 23%;
+  margin-right: 0.7vw;
+}
+.resume_s1 form > .select_box > .sub_select3 > input {
+  width: 23%;
+  margin-right: 0.7vw;
+}
+.resume_s1 form > .select_box > .sub_select3 > input:last-child {
+  width: 50%;
+}
+
 .resume_s1 form button {
   width: 7.49vw;
   height: 3vw;
