--- a/front/src/css/career.css
+++ b/front/src/css/career.css
@@ -6,6 +6,24 @@
   display: flex;
   flex-direction: column;
 }
+.career_s1 .title_box {
+  width: 28%;
+  height: 2.02vw;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 5vw;
+  margin-bottom: 5vw;
+}
+.career_s1 .title_box > img {
+  height: 100%;
+}
+.career_s1 .title_box > p {
+  font-size: 1.5vw;
+  font-weight: 700;
+  color: #787160;
+}
 .career_s1 form > p {
   font-size: 1.5vw;
   font-weight: 700;
@@ -29,18 +47,9 @@
 }
 .career_s1 form > .input_box > p {
   width: 32.63%;
-  /* height: 100%; */
   display: flex;
-  /* align-items: center; */
   font-size: 1.5vw;
   font-weight: 700;
-}
-.career_s1 form > .input_box > p > span {
-  font-size: 0.9vw;
-  font-weight: 700;
-  color: #b6b6b6;
-  display: flex;
-  align-items: flex-end;
 }
 .career_s1 form > .input_box > input {
   width: 67.37%;
@@ -50,7 +59,87 @@
   border: none;
   border-radius: 0.4vw;
 }
-
+.career_s1 form > .input_box > .sub_input {
+  width: 67.37%;
+  height: 100%;
+  font-size: 1.2vw;
+  border: none;
+  border-radius: 0.4vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.career_s1 form > .input_box > .sub_input > input {
+  width: 40%;
+  height: 100%;
+  background-color: #eeeeee;
+  font-size: 1.2vw;
+  border: none;
+  border-radius: 0.4vw;
+}
+.career_s1 form > .input_box > .sub_input1 > input {
+  width: 15%;
+}
+.career_s1 form > .input_box > .sub_input2 > input {
+  width: 20%;
+}
+.career_s1 form > .input_box > .sub_input3 > input {
+  width: 40%;
+}
+.career_s1 form .select_box {
+  width: 100%;
+  height: 3vw;
+  display: flex;
+  margin-top: 1.46vw;
+  align-items: center;
+}
+.career_s1 form > .select_box > p {
+  width: 32.63%;
+  /* height: 100%; */
+  display: flex;
+  /* align-items: center; */
+  font-size: 1.5vw;
+  font-weight: 700;
+}
+.career_s1 form > .select_box > .sub_select {
+  width: 67.37%;
+  height: 100%;
+  display: flex;
+}
+.career_s1 form > .select_box > .sub_select > .select {
+  height: 100%;
+  font-size: 1.2vw;
+  border: none;
+  border: 2px solid #eeeeee;
+  border-radius: 0.4vw;
+  font-size: 0.98vw;
+  color: #707070;
+  text-align: center;
+  margin: 0vw;
+  padding: 0vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.career_s1 form > .select_box > .sub_select > .select {
+  width: 5.62vw;
+  margin-right: 0.7vw;
+}
+.career_s1 form > .select_box > .sub_select > .select:last-child {
+  margin-right: 0vw;
+}
+.career_s1 form > .select_box > .sub_select1 > .select {
+  width: 48%;
+}
+.career_s1 form > .select_box > .sub_select2 > input {
+  width: 74%;
+  height: 100%;
+  background-color: #eeeeee;
+  font-size: 1.2vw;
+  border: none;
+  border-radius: 0.4vw;
+}
 .career_s1 form button {
   width: 7.49vw;
   height: 3vw;
