--- a/front/src/css/signinStep3.css
+++ b/front/src/css/signinStep3.css
@@ -105,6 +105,70 @@
   border-radius: 0.4vw;
   cursor: pointer;
 }
+.signin_step3_s2 form > .input_box > .sub_input {
+  width: 67.37%;
+  height: 100%;
+  font-size: 1.2vw;
+  border: none;
+  border-radius: 0.4vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.signin_step3_s2 form > .input_box > .sub_input > input {
+  width: 40%;
+  height: 100%;
+  background-color: #eeeeee;
+  font-size: 1.2vw;
+  border: none;
+  border-radius: 0.4vw;
+}
+.signin_step3_s2 form > .input_box > .sub_input1 > input {
+  width: 15%;
+}
+.signin_step3_s2 form .select_box {
+  width: 100%;
+  height: 3vw;
+  display: flex;
+  margin-top: 1.46vw;
+  align-items: center;
+}
+.signin_step3_s2 form > .select_box > p {
+  width: 32.63%;
+  /* height: 100%; */
+  display: flex;
+  /* align-items: center; */
+  font-size: 1.5vw;
+  font-weight: 700;
+}
+.signin_step3_s2 form > .select_box > .sub_select {
+  width: 67.37%;
+  height: 100%;
+  display: flex;
+}
+.signin_step3_s2 form > .select_box > .sub_select > .select {
+  height: 100%;
+  font-size: 1.2vw;
+  border: none;
+  border: 2px solid #eeeeee;
+  border-radius: 0.4vw;
+  font-size: 0.98vw;
+  color: #707070;
+  text-align: center;
+  margin: 0vw;
+  padding: 0vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.signin_step3_s2 form > .select_box > .sub_select > .select {
+  width: 7.8vw;
+  margin-right: 0.7vw;
+}
+.signin_step3_s2 form > .select_box > .sub_select > .select:last-child {
+  margin-right: 0vw;
+}
 .signin_step3_s2 form button {
   width: 7.49vw;
   height: 3vw;
