--- a/front/src/css/applicationStep1.css
+++ b/front/src/css/applicationStep1.css
@@ -192,6 +192,21 @@
   width: 11.6vw;
   margin-right: 0vw;
 }
+.applicationStep1_s2 form > .select_box > .sub_select3 > input {
+  width: 74%;
+  height: 100%;
+  background-color: #eeeeee;
+  font-size: 1.2vw;
+  border: none;
+  border-radius: 0.4vw;
+}
+.applicationStep1_s2 form > .select_box > .sub_select4 > .select {
+  width: 49%;
+  margin-right: 0.7vw;
+}
+.applicationStep1_s2 form > .select_box > .sub_select4 > .select:last-child {
+  margin-right: 0vw;
+}
 .applicationStep1_s2 form .article {
   width: 100%;
   height: 11.24vw;
