--- a/admin/src/css/individualUser.css
+++ b/admin/src/css/individualUser.css
@@ -1,25 +1,38 @@
 /* individualUser */
 .individualUser .table_container .row p:nth-child(1) {
-  margin-left: 1.98vw;
-  width: 1.98vw;
+  margin-left: 2.55vw;
+  width: 4.3%;
 }
 .individualUser .table_container .row p:nth-child(2) {
-  margin-left: 1.56vw;
-  width: 8.13vw;
+  margin-left: 1.72vw;
+  width: 4.95%;
 }
 .individualUser .table_container .row p:nth-child(3) {
-  margin-left: 1.56vw;
-  width: 15vw;
+  margin-left: 3.65vw;
+  width: 16.85%;
 }
 .individualUser .table_container .row p:nth-child(4) {
-  margin-left: 1.56vw;
-  width: 8.13vw;
+  margin-left: 5.26vw;
+  width: 5.9%;
 }
 .individualUser .table_container .row p:nth-child(5) {
-  margin-left: 1.56vw;
-  width: 8.13vw;
+  margin-left: 4.9vw;
+  width: 5.9%;
 }
 .individualUser .table_container .row p:nth-child(6) {
-  margin-left: 1.56vw;
-  width: 8.13vw;
+  margin-left: 4.4vw;
+  width: 5.9%;
+}
+.individualUser .table_container .row p:nth-child(7) {
+  margin-left: 2vw;
+  width: 6.6%;
+}
+.individualUser .table_container .row .btn {
+  margin-left: 0.52vw;
+  width: 6.6%;
+  height: 64%;
+  color: white;
+  background-color: #cabd99;
+  border-radius: 0.3vw;
+  cursor: pointer;
 }
