--- a/front/src/css/showListPopup.css
+++ b/front/src/css/showListPopup.css
@@ -2,8 +2,7 @@
 .showListPopup {
   width: 70vw;
   height: auto;
-  height: 900px;
-  overflow: scroll;
+  /* overflow: scroll; */
   /* height: 39.48vw; */
   position: fixed;
   top: 50%;
@@ -65,27 +64,30 @@
   width: 4%;
 }
 .showListPopup .article_container .list_box .row p:nth-child(2) {
-  width: 13%;
-}
-.showListPopup .article_container .list_box .row p:nth-child(3) {
   width: 10%;
 }
+.showListPopup .article_container .list_box .row p:nth-child(3) {
+  width: 15%;
+}
 .showListPopup .article_container .list_box .row p:nth-child(4) {
-  width: 18%;
+  width: 6%;
 }
 .showListPopup .article_container .list_box .row p:nth-child(5) {
-  width: 7%;
-}
-.showListPopup .article_container .list_box .row p:nth-child(6) {
-  width: 12%;
+  width: 20%;
   overflow: hidden;
   white-space: nowrap;
 }
-.showListPopup .article_container .list_box .row p:nth-child(7) {
-  width: 10%;
+.showListPopup .article_container .list_box .row p:nth-child(6) {
+  width: 9%;
 }
-.showListPopup .article_container .list_box .row p:nth-child(8) {
-  width: 16%;
+.showListPopup .article_container .list_box .row p:nth-child(7) {
+  width: 12%;
+}
+
+.showListPopup .article_container .color_box {
+  width: 10vw;
+  margin-top: 1vw;
+  margin-left: auto;
 }
 .showListPopup .article_container .text_box {
   width: 76%;
