--- a/front/src/css/applicationStep1.css
+++ b/front/src/css/applicationStep1.css
@@ -207,6 +207,30 @@
 .applicationStep1_s2 form > .select_box > .sub_select4 > .select:last-child {
   margin-right: 0vw;
 }
+.applicationStep1_s2 form > .select_box > .sub_select5 {
+  align-items: center;
+  justify-content: space-between;
+}
+.applicationStep1_s2 form > .select_box > .sub_select5 > .select {
+  width: 5.8vw;
+  margin-right: 0.7vw;
+}
+.applicationStep1_s2 form > .select_box > .sub_select5 > .select:last-child {
+  width: 11.6vw;
+  margin-right: 0vw;
+}
+.applicationStep1_s2 form > .select_box > .sub_select5 > input {
+  width: 20%;
+  height: 100%;
+  background-color: #eeeeee;
+  font-size: 1.2vw;
+  border: none;
+  border-radius: 0.4vw;
+}
+.applicationStep1_s2 form > .select_box > .sub_select5 p {
+  font-size: 1.5vw;
+  font-weight: 700;
+}
 .applicationStep1_s2 form .article {
   width: 100%;
   height: 11.24vw;
