--- a/front/src/css/applicationStep1.css
+++ b/front/src/css/applicationStep1.css
@@ -62,8 +62,8 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
+  padding-left: 1vw;
 }
-
 .applicationStep1_s2 form .input_box {
   width: 100%;
   height: 3vw;
@@ -86,14 +86,7 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
-}
-.applicationStep1_s2 form > .input_box > input {
-  width: 67.37%;
-  height: 100%;
-  background-color: #eeeeee;
-  font-size: 1.2vw;
-  border: none;
-  border-radius: 0.4vw;
+  padding-left: 1vw;
 }
 .applicationStep1_s2 form > .input_box > .sub_input {
   width: 67.37%;
@@ -112,6 +105,7 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
+  text-align: center;
 }
 .applicationStep1_s2 form .select_box {
   width: 100%;
@@ -199,6 +193,7 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
+  padding-left: 1vw;
 }
 .applicationStep1_s2 form > .select_box > .sub_select4 > .select {
   width: 49%;
@@ -226,6 +221,7 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
+  text-align: center;
 }
 .applicationStep1_s2 form > .select_box > .sub_select5 p {
   font-size: 1.5vw;
