--- a/front/src/css/career.css
+++ b/front/src/css/career.css
@@ -58,6 +58,7 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
+  padding-left: 1vw;
 }
 .career_s1 form > .input_box > .sub_input {
   width: 67.37%;
@@ -76,6 +77,7 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
+  text-align: center;
 }
 .career_s1 form > .input_box > .sub_input1 > input {
   width: 15%;
@@ -151,6 +153,7 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
+  padding-left: 1vw;
 }
 .career_s1 form button {
   width: 7.49vw;
