--- a/front/src/css/recruitment.css
+++ b/front/src/css/recruitment.css
@@ -58,6 +58,7 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
+  padding-left: 1vw;
 }
 .recruitment_s1 form > .input_box > .sub_input {
   width: 67.37%;
@@ -134,6 +135,7 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
+  padding-left: 1vw;
 }
 .recruitment_s1 form > .select_box > .sub_select3 > .select:last-child {
   width: 49%;
