--- a/front/src/css/resume.css
+++ b/front/src/css/resume.css
@@ -30,6 +30,7 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
+  padding-left: 1vw;
 }
 
 .resume_s1 form .input_box {
@@ -54,14 +55,7 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
-}
-.resume_s1 form > .input_box > input {
-  width: 67.37%;
-  height: 100%;
-  background-color: #eeeeee;
-  font-size: 1.2vw;
-  border: none;
-  border-radius: 0.4vw;
+  padding-left: 1vw;
 }
 .resume_s1 form > .input_box > .sub_input {
   width: 67.37%;
@@ -80,6 +74,7 @@
   font-size: 1.2vw;
   border: none;
   border-radius: 0.4vw;
+  text-align: center;
 }
 .resume_s1 form .select_box {
   width: 100%;
