--- a/front/src/css/banner.css
+++ b/front/src/css/banner.css
@@ -1,10 +1,24 @@
 .banner {
   width: 100%;
   height: 20.34vw;
+  position: relative;
 }
-.banner img {
+.banner > img {
   width: 100%;
   height: 100%;
+}
+.banner .dot_box {
+  width: 100%;
+  height: auto;
+  position: absolute;
+  bottom: 0.6vw;
+  display: flex;
+  justify-content: center;
+}
+.banner .dot_box img {
+  width: 0.8vw;
+  margin: 0 0.4vw;
+  cursor: pointer;
 }
 
 @media (max-width: 500px) {
