--- a/front/src/css/showUserDetail.css
+++ b/front/src/css/showUserDetail.css
@@ -74,18 +74,60 @@
 .showUserDetail .article_container .text_box p:nth-child(2) {
   width: 60%;
 }
-.showUserDetail .article_container .btn {
-  width: 5.31vw;
-  height: 2.14vw;
-  margin: 0 auto;
-  margin-top: 4.17vw;
-  margin-bottom: 14vw;
-  font-size: 0.83vw;
-  color: white;
-  background-color: #cabd99;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 0.4vw;
-  cursor: pointer;
+
+@media print {
+  /* showUserDetail */
+  body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+  .article_container {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    margin-top: 4vw;
+    margin-bottom: 2vw;
+  }
+  .article_container > p:nth-child(1) {
+    font-size: 2.5vw;
+  }
+  .article_container > .title {
+    font-size: 2vw;
+    margin-top: 1.5vw;
+    margin-bottom: 1.5vw;
+  }
+  /* .article_container > .title {
+    font-size: 1.09vw !important;
+    font-weight: 700;
+    color: black !important;
+    margin-top: 2vw !important;
+    text-align: center;
+    border: 1px solid blue;
+  } */
+  .article_container .text_box {
+    width: 80%;
+    height: 3vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
+  .article_container .text_box:last-child {
+    margin-bottom: 1vw;
+  }
+  .article_container .text_box p {
+    font-size: 1.4vw;
+  }
+  .article_container .text_box p:nth-child(1) {
+    width: 30%;
+    text-align: center;
+  }
+  .article_container .text_box p:nth-child(2) {
+    width: 60%;
+  }
 }
